syntax = "proto3";

package parentalapprovalmanagement;
import "google/protobuf/timestamp.proto";

service ParentalApprovalManagementGrpcService {
  rpc GetPendingTasksToApprove(GetPendingTasksToApproveRequest) returns (GetPendingTasksToApproveResponse) {}
  rpc GetSelectedTask(GetSelectedTaskRequest) returns (GetSelectedTaskResponse) {}
  rpc ApproveTask(ApproveTaskRequest) returns (ApproveTaskResponse) {}
}

message GetPendingTasksToApproveRequest {
  int32 parent_id = 1;
}

message GetPendingTasksToApproveResponse {
  repeated Task tasks = 1;
}

message GetSelectedTaskRequest {
  int32 id = 1;
}

message GetSelectedTaskResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 assigned_user_id = 4;
  google.protobuf.Timestamp due_date = 5;
  google.protobuf.Timestamp creation_date = 6;
}

message ApproveTaskRequest {
  int32 task_id = 1;
  int32 parent_id = 2; // Or some identifier of the approving parent
}

message ApproveTaskResponse {
  bool success = 1;
  string message = 2; // Optional: success or error message
}

message Task {
  int32 id = 1;
  string title = 2;
  string student_name = 3;
}